<resources>
    <string name="app_name">HIIT Workout Assistant</string>
    <string name="tapme">Tap me to start!</string>
    <string name="set">Set and Go</string>
    <string name="_1">+1</string>
    <string name="exercise">Exercise</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="warmup">Warmup</string>
    <string name="rest">Rest</string>
    <string name="cooldown">Cooldown</string>
    <string name="finished">Workout completed</string>
    <string name="roundsAmount">Rounds Amount:</string>
    <string name="warmupDuration">Warmup duration:</string>
    <string name="intervalDuration">Interval duration:</string>
    <string name="restDuration">Rest duration:</string>
    <string name="cooldownDuration">Cooldown duration:</string>
    <string name="setupLabel">Input your workout settings</string>
    <string name="decreaseByfive">-5</string>
    <string name="increaseByfive">+5</string>
    <string name="decreaseBy30">-30</string>
    <string name="increaseBy30">+30</string>
    <string name="dm_disable">Disable dark mode</string>
    <string name="dm_enable">Enable dark mode</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="reset_all">Reset all</string>
    <string name="set_and_go"><![CDATA[Set & go]]></string>
    <string name="in_seconds">(use seconds!)</string>
    <string name="settings_saved">Settings saved</string>
    <string name="settings_loaded">Previous settings loaded</string>
</resources>