<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/setuplayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Setup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="401dp"
        android:layout_height="29dp"
        android:lineSpacingExtra="8sp"
        android:singleLine="true"
        android:text="@string/setupLabel"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/roundsButton_increase"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:fontFamily="sans-serif-black"
        android:text="@string/plus"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <Button
        android:id="@+id/restButton_decrease"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/decreaseByfive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/restButton_increase"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/increaseByfive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/cooldownButton_decrease"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/decreaseBy30"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/cooldownButton_increase"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/increaseBy30"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <Button
        android:id="@+id/intervalButton_decrease"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/decreaseByfive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/intervalButton_increase"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/increaseByfive"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <Button
        android:id="@+id/warmupButton_decrease"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/decreaseBy30"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/warmupButton_increase"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:text="@string/increaseBy30"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <Button
        android:id="@+id/roundsButton_decrease"
        android:layout_width="@dimen/setupButton_width"
        android:layout_height="@dimen/setupButton_height"
        android:fontFamily="sans-serif-black"
        android:padding="-10dp"
        android:text="@string/minus"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.716"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <EditText
        android:id="@+id/intervalInput"
        android:layout_width="175dp"
        android:layout_height="wrap_content"

        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingTop="2dp"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/intervalButton_decrease"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <EditText
        android:id="@+id/restInput"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingTop="2dp"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restButton_decrease"
        app:layout_constraintHorizontal_bias="0.474"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.542" />

    <TextView
        android:id="@+id/roundsInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="1sp"
        android:text="@string/roundsAmount"
        android:textAlignment="textStart"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/roundsInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/roundsInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/restInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/restDuration"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/restInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/restInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <TextView
        android:id="@+id/intervalInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intervalDuration"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/intervalInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/intervalInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/roundsInput"
        android:layout_width="174dp"
        android:layout_height="34dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingTop="2dp"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/roundsButton_decrease"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.191" />

    <EditText
        android:id="@+id/cooldownInput"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingTop="2dp"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintBottom_toTopOf="@+id/resetButton"
        app:layout_constraintEnd_toStartOf="@+id/cooldownButton_decrease"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.888" />

    <TextView
        android:id="@+id/warmupInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/warmupDuration"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/warmupInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/warmupInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/warmupInput"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number"
        android:paddingTop="2dp"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textColorHint="@color/text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/warmupButton_decrease"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <TextView
        android:id="@+id/cooldownInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cooldownDuration"
        android:textColor="@color/text"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/cooldownInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cooldownInput"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.997" />

    <Button
        android:id="@+id/setButton"
        android:layout_width="135dp"
        android:layout_height="34dp"
        android:background="@color/button"
        android:text="@string/set_and_go"
        android:textColor="@color/text"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.717"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="81dp"
        android:layout_height="34dp"
        android:background="@color/button"
        android:lineSpacingExtra="8sp"
        android:text="@string/reset_all"
        android:textColor="@color/text"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/setButton"
        app:layout_constraintHorizontal_bias="0.623"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.796" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="375dp"
        android:layout_height="27dp"
        android:layout_marginTop="44dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:singleLine="true"
        android:text="@string/in_seconds"
        android:textAlignment="center"
        android:textColor="@color/text"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</androidx.constraintlayout.widget.ConstraintLayout>